2010-03-07  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added aria2.forceRemove XML-RPC method.
	* doc/aria2c.1.txt
	* src/XmlRpcMethodFactory.cc
	* src/XmlRpcMethodImpl.cc
	* src/XmlRpcMethodImpl.h

2010-03-07  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added debug log.
	* src/AbstractCommand.cc

2010-03-07  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Create CreateRequestCommand to the number of -s/-C when URIs are
	added by XML-RPC.
	* src/RequestGroup.cc
	* src/RequestGroup.h
	* src/XmlRpcMethodImpl.cc

2010-03-07  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added 'status' key to the response of getUri XML-RPC method.
	* doc/aria2c.1.txt
	* src/XmlRpcMethodImpl.cc

2010-03-06  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Replaced Time::reset() call with assigning of global::wallclock.
	* src/BtLeecherStateChoke.cc
	* src/BtSeederStateChoke.cc
	* src/PeerSessionResource.cc
	* src/RequestSlot.cc
	* src/ServerStat.cc
	* src/SpeedCalc.cc

2010-03-06  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added changeUri XML-RPC method.  This method removes/adds URIs
	dynamically.
	* doc/aria2c.1.txt
	* src/AbstractCommand.cc
	* src/DownloadContext.cc
	* src/DownloadContext.h
	* src/FileEntry.cc
	* src/FileEntry.h
	* src/Request.cc
	* src/Request.h
	* src/RequestGroup.cc
	* src/RequestGroupMan.cc
	* src/XmlRpcMethodFactory.cc
	* src/XmlRpcMethodImpl.cc
	* src/XmlRpcMethodImpl.h
	* test/FileEntryTest.cc
	* test/XmlRpcMethodTest.cc

2010-03-06  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Rewritten copy ctor of RequestSlot to use initialization list.
	* src/RequestSlot.h

2010-03-06  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added Time global::wallclock to cache "current time" to reduce the
	call gettimeofday(). Global variables are now in namespace global.
	* src/AbstractCommand.cc
	* src/ActivePeerConnectionCommand.cc
	* src/AdaptiveURISelector.cc